[tool.poetry]
name = "nbsphinx_test"
version = "0.1.0"
description = ""
authors = ["ajp619"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0"
sphinx = "^2.0"
nbsphinx = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
